# attack-graph-analysis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  aga.1  aga.desktop  analyze.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
attack_graph/: __init__.py  __main__.py  builder.py  cli.py  connectivity.py  construction.py  domains.py  export.py  graph_io.py  models.py  security.py  shortest_paths.py  visualization.py  vulnerabilities.py  weights.py
attack_graph/data/: campus_cvss.json  campus_paper.json  single_chokepoint.json  supply_chain.json  transport_road.json
attack_graph/probes/: __init__.py  nmap.py  wifi.py
completions/: _aga  aga.bash  aga.fish
debian/: attack-graph-analysis.install  attack-graph-analysis.manpages  changelog  control  copyright  rules  watch
debian/tests/: control
discovery/: external_only.json  foothold_web.json  wifi_sample_scan.txt
graphs/: deep_defense.json  highly_redundant.json  isolated_target.json  social_influence.json
paper/: reproduction.py
tests/: __init__.py  conftest.py  test_cli.py  test_graph.py
